language JN: 1) background

--- a/TeX/paper/parts/soc_ext_body.tex
+++ b/TeX/paper/parts/soc_ext_body.tex
@@ -16,7 +16,7 @@ I find significant and robust evidence that football matches lead to an increase
 
 
 % channels 
-There are a number of theories rationalizing spectator violence. For instance, the frustration-aggression hypothesis, proposed by \cite{dollard1939frustration}, interprets violent behavior as an act to rehabilitate self-esteem triggered by a frustrating event, such as the defeat of one's favorite team. Another prominent theory is the idea of social learning, according to which spectators mimic the behavior displayed on the field \citep{bandura1973aggression, bandura2007social}. In my analysis, I test whether the frustration-aggression hypothesis can serve as an explanation for the increase in physical assaults. To do so, I use emotional cues from either emotionally unsettling events during the game or when game outcomes do not align with pregame expectations. In both cases, there is no evidence to support the frustration-aggression hypothesis. In the second step, I consider the prominence of games and teams as potential channels. In games with high rivalry, the impact on the rate of physical assaults is three times higher. This larger effect may be related to the mutual dislike of opposing fan groups or to the social learning theory, as high-rivalry matches are characterized by more intensity on the field. Furthermore, I find larger effects for the highest division of the league system, which attracts the most viewers. Ultimately, I cannot pinpoint the one channel at play, but there is suggestive evidence that spectators mimic the behavior of the players, that violent viewers select into specific matches, and eventually a mechanic agglomeration effect. 
+There are a number of theories rationalizing spectator violence. For instance, the frustration-aggression hypothesis, proposed by \cite{dollard1939frustration}, interprets violent behavior as an act to rehabilitate self-esteem triggered by a frustrating event, such as the defeat of one's favorite team. Another prominent theory is the idea of social learning, according to which spectators mimic the behavior displayed on the field \citep{bandura1973aggression, bandura2007social}. In my analysis, I test whether the frustration-aggression hypothesis can serve as an explanation for the increase in physical assaults. To do so, I use emotional cues from either emotionally unsettling events during the game or when game outcomes do not align with pregame expectations. In both cases, there is no evidence to support the frustration-aggression hypothesis. In the second step, I consider the prominence of games and teams as potential channels. In games with high rivalry, the impact on the rate of physical assaults is three times higher. This larger effect may be related to the mutual dislike of opposing fan groups or to the social learning theory, as high-rivalry matches are characterized by more intensity on the field. Furthermore, I find larger effects for the highest division of the league system, which attracts the most viewers. Ultimately, I cannot pinpoint the one channel at play, but there is suggestive evidence that spectators mimic the behavior of the players, that violent viewers select into specific matches, and eventually a mechanical agglomeration effect. 
 
 
 
@@ -57,8 +57,10 @@ The remainder of the paper is structured as follows. The next section provides i
 
 
 % German Football League System
-\subsection{German Football League System}
-The three full professional divisions of the German football league system are held under the jurisdiction of the German Football Association (DFB) and the German Football League (DFL). While the two top flights \textit{Bundesliga} and \textit{2. Bundesliga} are organized by the DFL, the third division \textit{3. Liga} is run by the DFB itself. Teams can move through the levels of the league system by either promotion or relegation. The two top divisions consist of 18 teams that play 17 home and away games in one season. The third level contains 20 teams with 19 home and away games. The empirical approach of this paper exploits the variation in the timing of matches. Since 2006, the preparation of the match schedules for the \textit{Bundesliga} and the \textit{2. Bundesliga} is carried out with a software that uses integer linear programming.\footnote{For details of how the match plans are made, please refer to \href{https://www.bundesliga.com/de/bundesliga/news/so-entsteht-der-spielplan-bundesliga-2-bundesliga-dfl-computer-software.jsp}{https://www.bundesliga.com/de/bundesliga/news/so-entsteht-der-spielplan-bundesliga-2-bundesliga-dfl-computer-software.jsp}} The software outlines the rough details such as the fixtures per matchday. The exact date and time, however, are determined in the course of the season. The late exact scheduling allows to take into account guidelines from local authorities, security bodies, the Central Sports Intelligence Unit (ZIS), international football associations (FIFA/UEFA), fans, clubs, and stadium operators. In addition to obvious restrictions such as the fact that neighboring clubs should play their home matches at a different time, the DFL has to consider public holidays, parallel major events, or match dates of international competitions.
+\subsection{The German Football League System}
+The three fully professional divisions in the German football league system are managed under the jurisdiction of the German Football Association (DFB) and the German Football League (DFL). While the top two leagues, \textit{Bundesliga} and \textit{2. Bundesliga}, are organized by the DFL, the third division, \textit{3. Liga}, is run by the DFB itself. Teams can be promoted or relegated from one league to another. The top two divisions consist of 18 teams playing 17 home and away games in one season. The third league contains 20 teams playing 19 home and away games.
+
+The empirical approach of this paper exploits the variation in the scheduling of matches. Since 2006, the match schedules for the \textit{Bundesliga} and the \textit{2. Bundesliga} are created with a software that uses integer linear programming.\footnote{For details on how the match schedules are created, please refer to \href{https://www.bundesliga.com/de/bundesliga/news/so-entsteht-der-spielplan-bundesliga-2-bundesliga-dfl-computer-software.jsp}{https://www.bundesliga.com/de/bundesliga/news/so-entsteht-der-spielplan-bundesliga-2-bundesliga-dfl-computer-software.jsp}} The software outlines the rough details such as the matches per gameday. The exact date and time, however, are determined in the course of the season. The later exact scheduling makes it possible to take into account guidelines from local authorities, security bodies, the Central Sports Intelligence Unit (ZIS), international football associations (FIFA/UEFA), fans, clubs, and stadium operators. In addition to obvious restrictions such as the fact that home games of neighboring clubs should be scheduled at different times, the DFL has to consider public holidays, other major events, or match dates of international competitions.
 
 
 
@@ -66,25 +68,27 @@ The three full professional divisions of the German football league system are h
 \subsection{Football and Violent Crime}
 
 % ULTRAS & HOOLIGANS
-Spectator violence has a long tradition in the environment of professional football in Germany. From the change of terms for football fans you can see that spectator behavior underwent quite a transformation \citep{pilz2005kuttenfan}. In the 1960s and 1970s, the peaceful fan base was specified as \textit{camp-followers}, while one decade later the first problems of spectator violence arose with the presence of \textit{football rowdies}. In the 1980s, spectator violence was particularly omnipresent with the hooligans' movement. Since the end of the 1990s, a new group appeared in the stadiums, the \textit{Ultras}. Originated in Italy, the \textit{Ultras} have committed themselves to fight against the commercialization of football and to revitalize traditional football culture. Over the last years, the number of violent fans has been increasing. The police differentiate between three types of football fans. Category A consists of peaceful fans, category B includes violence-prone fans, and category C contains fans that actively seek violence (violent criminals). Originally, the \textit{Ultras} could be located mostly in category A and sporadically in category B. Recently, however, a substantial share of the \textit{Ultras} has been classified as members of categories B and C. For instance, the \cite{zis17_18} identified 13.633 individuals belonging to either violence-prone or violence-seeking fans in the top three leagues for the season 2017/18. With more potential agitators, police officers report more aggressiveness directed against themselves \citep{feltes2010fussballgewalt}. Yet, it is not only the problem of having more violent fans, but also that the event character of violence during football games is on the rise \citep{pilz2005kuttenfan}. Violent actions are increasingly less connected with the events on the pitch. In fact, violence serves as an opportunity for identification in the quest for one's identity. Some violent fans find self-assertion by joining forces with like-minded individuals and discover their strength. The question is how to address the challenges coming from \textit{hooligans} and \textit{Ultras}. \cite{poutvaara2009police} investigate the impact of counter-hooliganism policy in the Swedish context. They find that the reallocation of the Sport Intelligence and Tactical Unit to other activities was accompanied by increases in violent crime by hooligans. \cite{feltes2010fussballgewalt} emphasizes the concept of `balanced policing', which acknowledges that risks coming from the spectators are dynamic and require quick responses to either escalate or deescalate.\footnote{Depending on which types of violent fans the police is facing, the officers have to adjust their behavior accordingly \citep{feltes2010fussballgewalt}. On the one hand, hooligans require a zero-tolerance policy and any absence of drastic measures is seen as an invitation to live out violent desires. On the other hand, Ultras should be given some leeway to allow for self-regulation.} 
+Spectator violence has a long tradition in the context of professional football in Germany. The change in names for football fans illustrates that spectator behavior has changed considerably \citep{pilz2005kuttenfan}. In the 1960s and 1970s, the peaceful fan base was refereed to as \textit{camp-followers}, while one decade later the first problems of spectator violence emerged with the so-called \textit{football rowdies}. In the 1980s, spectator violence was omnipresent, mainly due to the hooligan movement. Since the late 1990s, a new group has appeared in the stadiums, the \textit{ultras}. Originally from Italy, the \textit{ultras}are dedicated to fighting the commercialization of football and to revitalizing traditional football culture. Over the last years, the number of violent fans has been increasing. The police distinguish between three types of football fans. Category A includes peaceful fans, category B consists of fans inclined to violence, and category C contains fans who actively seek violence (violent criminals). Originally, the \textit{ultras} were predominantly assigned to category A and occasionally to category B. Recently, however, a substantial share of the \textit{ultras} has been classified as members of categories B and C. In the season 2017/18, for instance, the \cite{zis17_18} identified 13.633 individuals in the top three leagues who were either prone to violence or seeking violence. With more potential agitators, police officers report more aggression directed at them \citep{feltes2010fussballgewalt}. However, it is not only the growing number of violent fans that is a problem, but also the fact that the event character of violence during football games is increasing \citep{pilz2005kuttenfan}. Violent actions are less and less connected with the events on the playing field. In fact, violence serves as an opportunity for identification in the search for one's identity. Some violent fans find self-assertion by joining like-minded individuals to discover their strength. The question is how to address the challenges posed by \textit{hooligans} and \textit{ultras}. \cite{poutvaara2009police} investigate the impact of anti-hooliganism policy in the Swedish context. They find that the assignment of other duties to the Sport Intelligence and Tactical Unit was accompanied by an increase in violent crime by hooligans. \cite{feltes2010fussballgewalt} emphasizes the concept of `balanced policing', which acknowledges that risks from spectators are dynamic and require quick responses to either escalate or deescalate.\footnote{Depending on the types of violent fans the police are confronted with, the officers have to adjust their behavior accordingly \citep{feltes2010fussballgewalt}. On the one hand, a zero-tolerance policy must be applied to \textit{hooligans} and any failure to take drastic measures is seen as an invitation to act out violent desires. On the other hand, \textit{ultras} should be given some leeway to allow self-regulation.} 
 
 
 
 % THEORIES OF SPECTATOR VIOLENCE
-There are a couple of theories rationalizing spectator violence.\footnote{Theoretically, there could also be a decreasing assault rate due to football games. This may happen if individuals with a higher propensity to act violently attend the matches. \cite{dahl2009movie} find a similar effect for violent movies and name this a `self-incapacitation effect'. Yet, as only hourly data can reveal the effect and the analysis draws on daily data, I focus on theories of why the rate of violence is increasing due to football games.} First, the higher number of assaults could be a mere mechanic effect arising from increased social contacts and a change in how the interactions take place \citep{montolio2019measuring}. For instance, the \textit{Bundesliga} has the highest average attendance per match across all European main football leagues \citep{wicker2017effect}. In the season of 2014/15, more than 42,000 spectators attended on average a game in the highest flight of the German league system. This aspect is particularly relevant for smaller municipalities, which attract thousands of spectators per game \citep{lindo2018college}. Second, spectator violence may be the result of physiological arousal \citep{branscombe1992role}. Potential determinants of physiological arousal are increased heart-rate, blood pressure, and respiration, which may influence affect, cognition, and (anti-)social behavior. Third, \cite{dollard1939frustration} propose the idea of the frustration-aggression hypothesis.\footnote{\cite{berkowitz1989frustration} presents a good overview of the frustration-aggression hypothesis.} If the favorite team suffered a defeat, this may precipitate aggressive fan behavior (e.g. see the results obtained by \cite{card2011family}). Fourth, \cite{bandura1973aggression, bandura2007social} postulates the notion of `social learning' or mimicking behavior. Independent of the outcome of the match, the sheer observation of the game is enough to unleash violent actions.
+There are a number of theories rationalizing spectator violence.\footnote{Theoretically, football games can also lead to a decrease in the assault rate. This may happen if individuals with a higher propensity for violent behavior attend the matches. \cite{dahl2009movie} find a similar effect for violent movies and refer to this as the `self-incapacitation effect'. However, this effect can only be demonstrated with hourly data. As my analysis draws on daily data, I focus on theories as to why the rate of violence increases due to football games.} First, the higher number of assaults could be a merely mechanical effect resulting from increased social contacts and a change in the way interactions take place \citep{montolio2019measuring}. For instance, the \textit{Bundesliga} has the highest average number of spectators per match of all European major football leagues \citep{wicker2017effect}. In the 2014/15 season, an average of more than 42,000 spectators attended a game of the highest division of the German league system. This aspect is particularly relevant for smaller municipalities, which attract thousands of spectators per game \citep{lindo2018college}. Second, spectator violence may be the result of physiological arousal \citep{branscombe1992role}. Potential determinants of physiological arousal include increased heart-rate, blood pressure, and respiration, which may influence affect, cognition, and (anti-)social behavior. Third, \cite{dollard1939frustration} propose the idea of the frustration-aggression hypothesis.\footnote{\cite{berkowitz1989frustration} provides a helpful overview of the frustration-aggression hypothesis.} If the favorite team suffers a defeat, this may precipitate aggressive fan behavior (see, for instance, the results of \cite{card2011family}). Fourth, \cite{bandura1973aggression, bandura2007social} postulates the notion of `social learning' or mimetic behavior. Regardless of the outcome of the match, the mere observation of the game suffices to trigger violent actions.
 %Second, instinctual theories of aggression find human aggression genetically based \citep{baron1977human}. In other words, aggressive behavior is an inevitable predisposition. 
 
 
 
 % THE ROLE OF ALCOHOL
-Alcohol plays a crucial role in the context of spectator violence in German football stadiums. \cite{cook2013virtuous} describes the pharmacological effects of drinking alcohol on aggression and cognitive functioning. With drinking comes a loss of inhibition and impairments of judgment. Furthermore, participants of experiments have been found to show more aggressive behavior after drinking. The 2018 edition of the \citeauthor{PCS2018} specifies that more than every fourth assault (26.2 percent) was committed under the influence of alcohol. While some countries banned alcoholic drinks within the premises (e.g. Brazil since 2003), the rules in German stadiums are somewhat ambiguous. The DFB's security guidelines stipulate that the sale of alcoholic beverages is forbidden before and during games in the stadium. Nevertheless, with the approval of the responsible local security organs, the hosting clubs may, on their own authority, deviate from the regulations. Only in the case of high-risk games, the clubs are urged to adhere to the ban.\footnote{For details, please refer to: \href{https://www.sueddeutsche.de/sport/fussball-alkohol-in-stadien-nur-mit-ausdruecklicher-einwilligung-dpa.urn-newsml-dpa-com-20090101-150625-99-01743}{https://www.sueddeutsche.de/sport/fussball-alkohol-in-stadien-nur-mit-ausdruecklicher-einwilligung-dpa.urn-newsml-dpa-com-20090101-150625-99-01743}.} The clubs, however, have a strong incentive to deviate from the ban as more than one-sixth (538 million Euros in the season of 2017/18) of the \textit{Bundesliga} club's revenues comes through earnings on the matchday (e.g. tickets and catering) and the sale of alcoholic drinks contributes to that amount substantially \citep{deloitte2019report}. For this reason, alcohol and the potential side effects are very present in German football arenas.
+Alcohol plays a crucial role in the context of spectator violence in German football stadiums. \cite{cook2013virtuous} describes the pharmacological effects of alcohol consumption on aggression and cognitive functions. Alcohol consumption is associated with a loss of inhibition and impaired judgment. Furthermore, experiments have shown that participants exhibit more aggressive behavior after drinking. The 2018 edition of the \citeauthor{PCS2018} specifies that more than one in four assaults (26.2 percent) were committed under the influence of alcohol. While in some countries alcoholic beverages are prohibited on the premises (e.g. in Brazil since 2003), the rules in German stadiums are somewhat ambiguous. The DFB's security guidelines stipulate that the sale of alcoholic beverages is forbidden before and during games in the stadium. Nevertheless, with the approval of the responsible local security bodies, the hosting clubs can deviate from the regulations, on their own responsibility. Only in the case of high-risk games, the clubs are urged to comply with the ban.\footnote{For details, please refer to: \href{https://www.sueddeutsche.de/sport/fussball-alkohol-in-stadien-nur-mit-ausdruecklicher-einwilligung-dpa.urn-newsml-dpa-com-20090101-150625-99-01743}{https://www.sueddeutsche.de/sport/fussball-alkohol-in-stadien-nur-mit-ausdruecklicher-einwilligung-dpa.urn-newsml-dpa-com-20090101-150625-99-01743}.} The clubs, however, have a strong incentive to deviate from the ban as more than one-sixth (538 million Euros in the 2017/18 season) of the \textit{Bundesliga} clubs' earnings are generated by matchday revenues (e.g. tickets and catering) and the sale of alcoholic beverages is a substantial part of this \citep{deloitte2019report}. For this reason, alcohol and its potential side effects are very present in German football arenas.
 % any data on how much is consumed? https://www.news.de/sport/855220143/schalke-hat-die-durstigsten-fans/1/
 % Statista survey: 56  percent of respondents of a panel survey were in favor of banning alcohol from football stadiums, 35 percent defended the right to drink alcohol in football stadiums: https://de.statista.com/statistik/daten/studie/548802/umfrage/verbot-von-alkohol-in-fussballstadien/
 
 
 \subsection{Previous Literature}
 % Literature
-The paper relates to previous literature that investigates the impact of large scale sporting events on various types of criminal behavior. Studies in the US American context often use offense reports from the National Incident Based Reporting System to investigate the impact of American (college) football games on crime. \cite{rees2009college} exploit within agency variation to study the effects of Division I-A college American football games on various offense categories for the years 2000-2005.\footnote{Almost all of the following studies exploit within law enforcement agency variation over time while controlling for weather, holidays and other sources of heterogeneity across time.} They find that assaults, vandalism, arrests for disorderly conduct, and alcohol-related offenses increase in hosting municipalities on game days. More sizable effects are associated with upset game outcomes, defined as when lower-ranked teams win over better-ranked teams. The effects of away games are not significantly different from zero. \cite{lindo2018college} examine the effect of college party culture surrounding Division 1 American football games on sexual assaults. They show that the daily reports of rape victimization among 17-24-year-old women increase by 28 percent on games days. The effects are larger for home games, prominent matches, and teams playing in the better ranked subdivision of Division 1. Furthermore, they show that game outcomes matter: upset wins increase rape victimization strongly. \cite{card2011family} analyze the impact of emotionally unsettling events associated with wins and losses of professional American football teams on family violence for the years 1995-2006. They find an increase of intimate partner violence by ten percent in the event of upset losses (when the home team was expected to win). There are no effects for upset wins or when the game expectations are close. The effects of male-on-female intimate partner violence are pronounced around the end of the game and are larger for more prominent games. In the European context, researchers focus on football matches to estimate the effect of large scale sporting events on crime. \cite{marie2016police} investigates the effect of football matches on crime in London using hourly offense data obtained from the Metropolitan Crime Statistics System. His results show that property crimes increase (fall) by 4 percent (3 percent) for every extra 10,000 spectators attending a home (away) game. Violent crimes are only affected by derby matches. \cite{montolio2016time} study the temporal impact of football matches on criminal behavior in Barcelona (2007-2011). They match reports on registered crime with football matches played by the Football Club Barcelona (FCB) to see whether the games displace criminal activities temporally. They exploit a panel approach in which they compare crime for the same time window on the same weekday, with and without FCB games. Their results indicate temporal displacements for criminal activities of thefts, criminal damage, robberies, and gender violence. Moreover, instances of gender violence increase after home defeats. In a follow-up study, \cite{montolio2019measuring} investigate the spatial dimensions of the crime externalities stemming from football games. Their findings show increased levels of thefts (mainly pickpocketing) across the entire city in the event of a home game. The impact is larger for regions in close proximity to the stadium. During away games, by contrast, the number of thefts around the stadium is relatively smaller. The effects of football matches on assaults are analogous to thefts. In fact, they find a displacement effect of violent fans to areas close to the stadium on days with home matches.
+The paper relates to previous literature that investigates the impact of large scale sporting events on various types of criminal behavior. Studies in the US American context often use offense reports from the National Incident Based Reporting System to investigate the impact of American (college) football games on crime. \cite{rees2009college} exploit within agency variation to study the effects of Division I-A college American football games on various offense categories for the years 2000-2005.\footnote{Almost all of the following studies exploit within law enforcement agency variation over time while controlling for weather, holidays and other sources of heterogeneity over time.} They find an increase in assaults, vandalism, arrests for disorderly conduct, and alcohol-related offenses in hosting municipalities on game days. Larger effects are associated with unexpected game outcomes, defined as when lower ranked teams win against higher ranked teams. The effects of away games are not significantly different from zero. \cite{lindo2018college} examine the effect of college party culture in the context of Division 1 American football games on sexual assaults. They show that the daily reports of rape victimization among 17-24-year-old women increase by 28 percent on games days. The effects are larger for home games, prominent matches, and games involving teams playing in the better ranked subdivision of Division 1. Furthermore, they show that game outcomes matter: unexpected wins lead to a strong increase in the number of rapes. \cite{card2011family} analyze the impact of emotionally unsettling events associated with wins and losses of professional American football teams on family violence for the years 1995-2006. They find a ten percent increase in intimate partner violence in the event of unexpected losses (when the home team was expected to win). There are no effects for unexpected wins or when the game expectations predict a close match. The effects of intimate partner violence of men against women are pronounced around the end of the game and are larger for higher-profile games. 
+
+In the European context, researchers focus on football matches to estimate the effect of large scale sporting events on crime. \cite{marie2016police} investigates the effect of football matches on crime in London using hourly offense data from the Metropolitan Crime Statistics System. His results show that property crimes increase (decrease) by 4 percent (3 percent) for every additional 10,000 spectators attending a home (away) game. Violent crimes are only affected by derby matches. \cite{montolio2016time} study the temporal impact of football matches on criminal behavior in Barcelona (2007-2011). They match reports of registered crime with football matches played by the Football Club Barcelona (FCB) to see whether the games lead to temporal shifts in criminal activity. They employ a panel approach comparing crime rates during the same time window on the same weekday with and without FCB games. Their results indicate temporal shifts for criminal activities of thefts, criminal damage, robberies, and gender violence. Moreover, instances of gender violence increase after home defeats. In a follow-up study, \cite{montolio2019measuring} investigate the spatial dimensions of crime externalities associated with football games. Their findings show that, in the event of a home game, theft rates (mainly pickpocketing) increase in the entire city. The impact is larger for regions in close proximity to the stadium. During away games, by contrast, the number of thefts occurring near the stadium is relatively smaller. The effects of football matches on assaults are analogous to thefts. In fact, on days with home matches, there are relatively more physical assaults in areas close to the stadium.
 %\footnote{In addition to the papers presented in this section, other noteworthy studies in that strand of research are: \cite{kalist2016national}.}
 
 
